# winlog

./: README.md  pyproject.toml
notebooks/: 001 - Loguru.ipynb  002 - GICS.ipynb
src/winlog/: __init__.py
